pagina web pracica
practicando los stylos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>documento</title>
+    <title>Restaurante de Pizzas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <h1>Hola mundo</h1>
+
+<body id="inicio">
+    <div>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#pizzaitaliana">Pizza Italiana</a></li>
+                    <li><a href="#pizzachina">Pizza China</a></li>
+                    <li><a href="#pizzajaponesa">Pizza Japonesa</a></li>
+                </ul>
+            </nav>
+            <img src="/Clase_Laboratorio2/imagenes/logo.png" alt="Pizza">
+        </header>
+        <aside>
+            <p>Menu</p>
+            <nav>
+                <ul>
+                    <li><a href="#pizzaitaliana">Pizza Italiana</a></li>
+                    <li><a href="#pizzachina">Pizza China</a></li>
+                    <li><a href="#pizzajaponesa">Pizza Japonesa</a></li>
+                </ul>
+            </nav>
+            <form>
+                <h1>Contacto</h1>
+                <input type="text" placeholder="Nombres Completos">
+                <input type="email" placeholder="Email">
+                <textarea placeholder="Mensaje"></textarea>
+                <button>Enviar</button>
+            </form>
+        </aside>
+        <main>
+            <section>
+                <h5 id="pizzaitaliana">Pizza Italiana</h5>
+                <div class="card">
+                    <div class="card-imagen">
+                        <p class="precio">Precio</p>
+                    </div>
+                    <div class="descrition">
+                        description
+                    </div>
+                    <button>Añadir al Carrito</button>
+                </div>
+
+                <div class="card">
+                    <div class="card-imagen2">
+                        <p class="precio">Precio</p>
+                    </div>
+                    <div class="descrition">
+                        description
+                    </div>
+                    <button>Añadir al Carrito</button>
+                </div>
+
+                <div class="card">
+                    <div class="card-imagen3">
+                        <p class="precio">Precio</p>
+                    </div>
+                    <div class="descrition">
+                        description
+                    </div>
+                    <button>Añadir al Carrito</button>
+                </div>
+                <h5 id="pizzachina">Pizza China</h5>
+                <div class="card">
+                    <div class="card-imagen4">
+                        <p class="precio">Precio</p>
+                    </div>
+                    <div class="descrition">
+                        description
+                    </div>
+                    <button>Añadir al Carrito</button>
+                </div>
+
+                <div class="card">
+                    <div class="card-imagen5">
+                        <p class="precio">Precio</p>
+                    </div>
+                    <div class="descrition">
+                        description
+                    </div>
+                    <button>Añadir al Carrito</button>
+                </div>
+
+                <div class="card">
+                    <div class="card-imagen6">
+                        <p class="precio">Precio</p>
+                    </div>
+                    <div class="descrition">
+                        description
+                    </div>
+                    <button>Añadir al Carrito</button>
+                </div>
+                <h5 id="pizzajaponesa">Pizza Japonesa</h5>
+                <div class="card">
+                    <div class="card-imagen7">
+                        <p class="precio">Precio</p>
+                    </div>
+                    <div class="descrition">
+                        description
+                    </div>
+                    <button>Añadir al Carrito</button>
+                </div>
+
+                <div class="card">
+                    <div class="card-imagen8">
+                        <p class="precio">Precio</p>
+                    </div>
+                    <div class="descrition">
+                        description
+                    </div>
+                    <button>Añadir al Carrito</button>
+                </div>
+
+                <div class="card">
+                    <div class="card-imagen9">
+                        <p class="precio">Precio</p>
+                    </div>
+                    <div class="descrition">
+                        description
+                    </div>
+                    <button>Añadir al Carrito</button>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div>
+                <a href="#" target="_blank">
+                    <img src="./imagenes/logotwitter.png" alt="twitter">
+                </a>
+                <a href="#">
+                    <img src="./imagenes/logoinstagram.png" alt="instagram">
+                </a>
+                <a href="#">
+                    <img src="./imagenes/logofacebook.png" alt="facebook">
+                </a>
+                <span>
+                    &copy; 2023 Restaurante "El Programador". Todos los derechos reservados.
+                </span>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
