--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#pizzajaponesa">Pizza Japonesa</a></li>
                 </ul>
             </nav>
-            <img src="/Clase_Laboratorio2/imagenes/logo.png" alt="Pizza">
+            <img src="../LeoDTanos.github.io/imagenes/logo.png" alt="Pizza">
         </header>
         <aside>
             <p>Menu</p>
